L2 bagging grid search

--- a/model/ensemble.ipynb
+++ b/model/ensemble.ipynb
@@ -247,19 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
-      "text/plain": "BaggingRegressor(base_estimator=Pipeline(steps=[('poly', PolynomialFeatures()),\n                                                ('lasso',\n                                                 Lasso(alpha=12.807147786982478,\n                                                       max_iter=20687))]),\n                 max_samples=0.5, n_estimators=18)"
+      "text/plain": "(BaggingRegressor(base_estimator=Pipeline(steps=[('poly', PolynomialFeatures()),\n                                                 ('lasso',\n                                                  Lasso(alpha=12.807147786982478,\n                                                        max_iter=20687))]),\n                  max_samples=0.5, n_estimators=18),\n 86.15027990703051,\n 90.12425790601924)"
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L1_bagging_GS.best_estimator_"
+    "L1_bagging_GS.best_estimator_, np.mean(L1_bagging_GS.cv_results_['mean_test_r2']) * 100, np.mean(\n",
+    "    L1_bagging_GS.cv_results_['mean_train_r2']) * 100"
    ],
    "metadata": {
     "collapsed": false,
@@ -270,9 +271,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(74.14627965818734, 39943.986019962256)"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(test_y, L1_bagging_GS.predict(test_x)) * 100, mean_squared_error(test_y, L1_bagging_GS.predict(test_x),\n",
+    "                                                                          squared=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "outputs": [],
-   "source": [],
+   "source": [
+    "pd.to_pickle(pd.DataFrame(L1_bagging_GS.cv_results_),\n",
+    "             '../data/cv_results/ensemble/l1_bagging_gs.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures()),\n  ('ridge', Ridge(alpha=0.5378845624526254, max_iter=6055))],\n 'verbose': False,\n 'poly': PolynomialFeatures(),\n 'ridge': Ridge(alpha=0.5378845624526254, max_iter=6055),\n 'poly__degree': 2,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'ridge__alpha': 0.5378845624526254,\n 'ridge__copy_X': True,\n 'ridge__fit_intercept': True,\n 'ridge__max_iter': 6055,\n 'ridge__normalize': 'deprecated',\n 'ridge__positive': False,\n 'ridge__random_state': None,\n 'ridge__solver': 'auto',\n 'ridge__tol': 0.001}"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L2_model = Pipeline(steps=[('poly', PolynomialFeatures(degree=2)),\n",
+    "                           ('ridge', Ridge(alpha=0.5378845624526254, max_iter=6055))])\n",
+    "L2_bagging = BaggingRegressor(base_estimator=L2_model)\n",
+    "L2_model.get_params()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RandomizedSearchCV(cv=RepeatedKFold(n_repeats=12, n_splits=6, random_state=64),\n                   estimator=BaggingRegressor(base_estimator=Pipeline(steps=[('poly',\n                                                                              PolynomialFeatures()),\n                                                                             ('ridge',\n                                                                              Ridge(alpha=0.5378845624526254,\n                                                                                    max_iter=6055))])),\n                   n_iter=15, n_jobs=-1,\n                   param_distributions={'n_estimators': array([65, 74, 66, 36, 69, 19, 84, 98, 25, 52, 27, 43, 11, 23, 74, 65, 38,\n       47, 21, 90])},\n                   refit='mse', return_train_score=True,\n                   scoring={'me': make_scorer(max_error),\n                            'mse': make_scorer(mean_squared_error),\n                            'r2': make_scorer(r2_score)})"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L2_bagging_GS = RandomizedSearchCV(estimator=L2_bagging,\n",
+    "                                   param_distributions={'n_estimators': np.random.randint(10, 100, 20)},\n",
+    "                                   cv=cv,\n",
+    "                                   scoring={'r2': make_scorer(r2_score),\n",
+    "                                            'me': make_scorer(max_error),\n",
+    "                                            'mse': make_scorer(mean_squared_error)\n",
+    "                                            },\n",
+    "                                   refit='mse',\n",
+    "                                   return_train_score=True,\n",
+    "                                   n_jobs=-1,\n",
+    "                                   n_iter=15)\n",
+    "\n",
+    "L2_bagging_GS.fit(train_x, train_y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(BaggingRegressor(base_estimator=Pipeline(steps=[('poly', PolynomialFeatures()),\n                                                 ('ridge',\n                                                  Ridge(alpha=0.5378845624526254,\n                                                        max_iter=6055))]),\n                  n_estimators=11),\n 86.09059311980134,\n 89.28613115345779)"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L2_bagging_GS.best_estimator_, np.mean(L2_bagging_GS.cv_results_['mean_test_r2']) * 100, np.mean(\n",
+    "    L2_bagging_GS.cv_results_['mean_train_r2']) * 100"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(74.12505640031279, 39960.377618516635)"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(test_y, L2_bagging_GS.predict(test_x)) * 100, mean_squared_error(test_y, L2_bagging_GS.predict(test_x),\n",
+    "                                                                          squared=False)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
