L2 bagging grid search

--- a/model/ensemble.ipynb
+++ b/model/ensemble.ipynb
@@ -416,6 +416,21 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "pd.to_pickle(pd.DataFrame(L1_bagging_GS.cv_results_),\n",
+    "             '../data/cv_results/ensemble/l2_bagging_gs.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
