extra tree bagging grid search can't get much performance.

--- a/model/ensemble.ipynb
+++ b/model/ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -85,10 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "outputs": [],
    "source": [
-    "cv = RepeatedKFold(n_splits=6, n_repeats=12, random_state=64)"
+    "cv = RepeatedKFold(n_splits=5, n_repeats=10, random_state=64)"
    ],
    "metadata": {
     "collapsed": false,
@@ -567,6 +567,39 @@
    "source": [
     "pd.to_pickle(pd.DataFrame(DT_bagging_GS.cv_results_),\n",
     "             '../data/cv_results/ensemble/dt_bagging_gs.pkl')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(0.8349762209832174, 31912.670031483056)"
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "et_model = BaggingRegressor(base_estimator=Pipeline(steps=[('poly', PolynomialFeatures(degree=4)),\n",
+    "                                                           ('ET', ExtraTreeRegressor(min_samples_split=53,\n",
+    "                                                                                     min_samples_leaf=26,\n",
+    "                                                                                     max_features='auto',\n",
+    "                                                                                     max_depth=66,\n",
+    "                                                                                     ccp_alpha=6))]),\n",
+    "                            n_estimators=120,\n",
+    "                            n_jobs=-1)\n",
+    "\n",
+    "et_model.fit(train_x, train_y)\n",
+    "r2_score(test_y, et_model.predict(test_x)), mean_squared_error(test_y, et_model.predict(test_x), squared=False)"
    ],
    "metadata": {
     "collapsed": false,
