--- a/model/ensemble.ipynb
+++ b/model/ensemble.ipynb
@@ -611,6 +611,70 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Random forest"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures(degree=4)),\n  ('forest',\n   RandomForestRegressor(ccp_alpha=6, max_depth=66, min_samples_leaf=26,\n                         min_samples_split=53, n_estimators=50, n_jobs=-1))],\n 'verbose': False,\n 'poly': PolynomialFeatures(degree=4),\n 'forest': RandomForestRegressor(ccp_alpha=6, max_depth=66, min_samples_leaf=26,\n                       min_samples_split=53, n_estimators=50, n_jobs=-1),\n 'poly__degree': 4,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'forest__bootstrap': True,\n 'forest__ccp_alpha': 6,\n 'forest__criterion': 'squared_error',\n 'forest__max_depth': 66,\n 'forest__max_features': 'auto',\n 'forest__max_leaf_nodes': None,\n 'forest__max_samples': None,\n 'forest__min_impurity_decrease': 0.0,\n 'forest__min_samples_leaf': 26,\n 'forest__min_samples_split': 53,\n 'forest__min_weight_fraction_leaf': 0.0,\n 'forest__n_estimators': 50,\n 'forest__n_jobs': -1,\n 'forest__oob_score': False,\n 'forest__random_state': None,\n 'forest__verbose': 0,\n 'forest__warm_start': False}"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Forest_model = Pipeline(steps=[('poly', PolynomialFeatures(degree=4)),\n",
+    "                               ('forest', RandomForestRegressor(n_estimators=50,\n",
+    "                                                                min_samples_split=53,\n",
+    "                                                                min_samples_leaf=26,\n",
+    "                                                                max_features='auto',\n",
+    "                                                                max_depth=66,\n",
+    "                                                                ccp_alpha=6,\n",
+    "                                                                n_jobs=-1))])\n",
+    "Forest_model.get_params()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(0.8345432987223724, 31954.502354681867)"
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Forest_model.fit(train_x, train_y)\n",
+    "r2_score(test_y, Forest_model.predict(test_x)), mean_squared_error(test_y, Forest_model.predict(test_x), squared=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Predictions on Test Data"
    ],
    "metadata": {
