--- a/model/ensemble.ipynb
+++ b/model/ensemble.ipynb
@@ -621,13 +621,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 91,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures(degree=4)),\n  ('forest',\n   RandomForestRegressor(max_depth=80, min_samples_leaf=23, min_samples_split=46,\n                         n_estimators=200, n_jobs=-1))],\n 'verbose': False,\n 'poly': PolynomialFeatures(degree=4),\n 'forest': RandomForestRegressor(max_depth=80, min_samples_leaf=23, min_samples_split=46,\n                       n_estimators=200, n_jobs=-1),\n 'poly__degree': 4,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'forest__bootstrap': True,\n 'forest__ccp_alpha': 0.0,\n 'forest__criterion': 'squared_error',\n 'forest__max_depth': 80,\n 'forest__max_features': 'auto',\n 'forest__max_leaf_nodes': None,\n 'forest__max_samples': None,\n 'forest__min_impurity_decrease': 0.0,\n 'forest__min_samples_leaf': 23,\n 'forest__min_samples_split': 46,\n 'forest__min_weight_fraction_leaf': 0.0,\n 'forest__n_estimators': 200,\n 'forest__n_jobs': -1,\n 'forest__oob_score': False,\n 'forest__random_state': None,\n 'forest__verbose': 0,\n 'forest__warm_start': False}"
+      "text/plain": "{'memory': None,\n 'steps': [('poly', PolynomialFeatures(degree=3)),\n  ('forest',\n   RandomForestRegressor(max_depth=80, min_samples_leaf=23, min_samples_split=46,\n                         n_estimators=200, n_jobs=-1))],\n 'verbose': False,\n 'poly': PolynomialFeatures(degree=3),\n 'forest': RandomForestRegressor(max_depth=80, min_samples_leaf=23, min_samples_split=46,\n                       n_estimators=200, n_jobs=-1),\n 'poly__degree': 3,\n 'poly__include_bias': True,\n 'poly__interaction_only': False,\n 'poly__order': 'C',\n 'forest__bootstrap': True,\n 'forest__ccp_alpha': 0.0,\n 'forest__criterion': 'squared_error',\n 'forest__max_depth': 80,\n 'forest__max_features': 'auto',\n 'forest__max_leaf_nodes': None,\n 'forest__max_samples': None,\n 'forest__min_impurity_decrease': 0.0,\n 'forest__min_samples_leaf': 23,\n 'forest__min_samples_split': 46,\n 'forest__min_weight_fraction_leaf': 0.0,\n 'forest__n_estimators': 200,\n 'forest__n_jobs': -1,\n 'forest__oob_score': False,\n 'forest__random_state': None,\n 'forest__verbose': 0,\n 'forest__warm_start': False}"
      },
-     "execution_count": 67,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,13 +650,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "outputs": [
     {
      "data": {
-      "text/plain": "Pipeline(steps=[('poly', PolynomialFeatures(degree=4)),\n                ('forest',\n                 RandomForestRegressor(max_depth=80, min_samples_leaf=23,\n                                       min_samples_split=46, n_estimators=200,\n                                       n_jobs=-1))])"
+      "text/plain": "Pipeline(steps=[('poly', PolynomialFeatures(degree=3)),\n                ('forest',\n                 RandomForestRegressor(max_depth=80, min_samples_leaf=23,\n                                       min_samples_split=46, n_estimators=200,\n                                       n_jobs=-1))])"
      },
-     "execution_count": 68,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,13 +673,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
    "outputs": [
     {
      "data": {
-      "text/plain": "(0.8345678765990495, 31952.128915044115)"
+      "text/plain": "(0.837409422097269, 31676.52738924592)"
      },
-     "execution_count": 69,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,6 +688,66 @@
     "r2_score(test_y, Forest_model.predict(test_x)), mean_squared_error(test_y, Forest_model.predict(test_x), squared=False)\n",
     "# (0.8364032786197753, 31774.386618074877)\n",
     "# (0.8379728446988419, 31621.595670519357)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Gradient boosting tree"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Pipeline(steps=[('poly', PolynomialFeatures(degree=3)),\n                ('boosting',\n                 GradientBoostingRegressor(max_depth=80, min_samples_leaf=23,\n                                           min_samples_split=46,\n                                           n_estimators=250))])"
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GB_model = Pipeline(steps=[('poly', PolynomialFeatures(degree=3)),\n",
+    "                           ('boosting', GradientBoostingRegressor(n_estimators=250,\n",
+    "                                                                  min_samples_split=46,\n",
+    "                                                                  min_samples_leaf=23,\n",
+    "                                                                  max_depth=80))])\n",
+    "GB_model.fit(train_x, train_y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(85.12429880776236, 30299.021321262902)"
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(test_y, GB_model.predict(test_x)) * 100, mean_squared_error(test_y, GB_model.predict(test_x), squared=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -872,20 +932,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 94,
    "outputs": [
     {
      "data": {
-      "text/plain": "          SalePrice\nId                 \n1461  124058.397688\n1462  151960.995183\n1463  176038.773773\n1464  183030.394416\n1465  201676.238421\n...             ...\n2915   79975.071965\n2916   83430.751975\n2917  154013.966699\n2918  128418.514177\n2919  207893.118266\n\n[1459 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SalePrice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1461</th>\n      <td>124058.397688</td>\n    </tr>\n    <tr>\n      <th>1462</th>\n      <td>151960.995183</td>\n    </tr>\n    <tr>\n      <th>1463</th>\n      <td>176038.773773</td>\n    </tr>\n    <tr>\n      <th>1464</th>\n      <td>183030.394416</td>\n    </tr>\n    <tr>\n      <th>1465</th>\n      <td>201676.238421</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2915</th>\n      <td>79975.071965</td>\n    </tr>\n    <tr>\n      <th>2916</th>\n      <td>83430.751975</td>\n    </tr>\n    <tr>\n      <th>2917</th>\n      <td>154013.966699</td>\n    </tr>\n    <tr>\n      <th>2918</th>\n      <td>128418.514177</td>\n    </tr>\n    <tr>\n      <th>2919</th>\n      <td>207893.118266</td>\n    </tr>\n  </tbody>\n</table>\n<p>1459 rows × 1 columns</p>\n</div>"
+      "text/plain": "          SalePrice\nId                 \n1461  115458.805570\n1462  143968.525052\n1463  182833.798383\n1464  185518.939712\n1465  187676.457612\n...             ...\n2915   72158.151125\n2916   79612.959148\n2917  154404.189237\n2918  122005.062992\n2919  194648.250464\n\n[1459 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SalePrice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1461</th>\n      <td>115458.805570</td>\n    </tr>\n    <tr>\n      <th>1462</th>\n      <td>143968.525052</td>\n    </tr>\n    <tr>\n      <th>1463</th>\n      <td>182833.798383</td>\n    </tr>\n    <tr>\n      <th>1464</th>\n      <td>185518.939712</td>\n    </tr>\n    <tr>\n      <th>1465</th>\n      <td>187676.457612</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2915</th>\n      <td>72158.151125</td>\n    </tr>\n    <tr>\n      <th>2916</th>\n      <td>79612.959148</td>\n    </tr>\n    <tr>\n      <th>2917</th>\n      <td>154404.189237</td>\n    </tr>\n    <tr>\n      <th>2918</th>\n      <td>122005.062992</td>\n    </tr>\n    <tr>\n      <th>2919</th>\n      <td>194648.250464</td>\n    </tr>\n  </tbody>\n</table>\n<p>1459 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 70,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prediction = pd.DataFrame(data=Forest_model.predict(X_t), index=house_test_data.index, columns=['SalePrice'])\n",
+    "prediction = pd.DataFrame(data=GB_model.predict(X_t), index=house_test_data.index, columns=['SalePrice'])\n",
     "prediction"
    ],
    "metadata": {
@@ -897,10 +957,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 95,
    "outputs": [],
    "source": [
-    "prediction.to_csv('../data/predictions_v_3.csv')"
+    "prediction.to_csv('../data/predictions_v_4.csv')"
    ],
    "metadata": {
     "collapsed": false,
