--- a/model/ensemble.ipynb
+++ b/model/ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 102,
    "outputs": [],
    "source": [
     "base_pipeline = Pipeline(steps=[('most_miss_cat', imputation.CategoricalImputer(variables=['Alley',\n",
@@ -145,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 103,
    "outputs": [
     {
      "data": {
       "text/plain": "((1168, 20), (292, 20), (1168,), (292,))"
      },
-     "execution_count": 5,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,13 +529,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 111,
    "outputs": [
     {
      "data": {
-      "text/plain": "(0.8278879521939857, 32590.836957695563)"
+      "text/plain": "(0.7228701106263471, 41355.33677874742)"
      },
-     "execution_count": 12,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,20 +707,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 106,
    "outputs": [
     {
      "data": {
-      "text/plain": "Pipeline(steps=[('poly', PolynomialFeatures(degree=3)),\n                ('boosting',\n                 GradientBoostingRegressor(max_depth=80, min_samples_leaf=23,\n                                           min_samples_split=46,\n                                           n_estimators=250))])"
+      "text/plain": "Pipeline(steps=[('poly', PolynomialFeatures(degree=3)),\n                ('boosting',\n                 GradientBoostingRegressor(max_depth=80, min_samples_leaf=23,\n                                           min_samples_split=46,\n                                           n_estimators=200))])"
      },
-     "execution_count": 92,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "GB_model = Pipeline(steps=[('poly', PolynomialFeatures(degree=3)),\n",
-    "                           ('boosting', GradientBoostingRegressor(n_estimators=250,\n",
+    "                           ('boosting', GradientBoostingRegressor(n_estimators=200,\n",
     "                                                                  min_samples_split=46,\n",
     "                                                                  min_samples_leaf=23,\n",
     "                                                                  max_depth=80))])\n",
@@ -735,13 +735,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 107,
    "outputs": [
     {
      "data": {
-      "text/plain": "(85.12429880776236, 30299.021321262902)"
+      "text/plain": "(70.00713515937946, 43022.817955742175)"
      },
-     "execution_count": 93,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,6 +753,79 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Adaptive boost"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(0.8227152298372435, 33076.960299950115)"
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ada_model = AdaBoostRegressor(base_estimator=BaggingRegressor(base_estimator=Pipeline(steps=[('poly',\n",
+    "                                                                                              PolynomialFeatures(\n",
+    "                                                                                                  degree=4)),\n",
+    "                                                                                             ('DT',\n",
+    "                                                                                              DecisionTreeRegressor(\n",
+    "                                                                                                  ccp_alpha=6,\n",
+    "                                                                                                  max_depth=36,\n",
+    "                                                                                                  max_features='auto',\n",
+    "                                                                                                  min_samples_leaf=21,\n",
+    "                                                                                                  min_samples_split=20))]),\n",
+    "                                                              n_estimators=19,\n",
+    "                                                              n_jobs=-1),\n",
+    "                              n_estimators=200,\n",
+    "                              loss='exponential')\n",
+    "ada_model.fit(train_x, train_y)\n",
+    "r2_score(test_y, ada_model.predict(test_x)), mean_squared_error(test_y, ada_model.predict(test_x), squared=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ada_gb_model = AdaBoostRegressor(base_estimator=Pipeline(steps=[('poly', PolynomialFeatures(degree=3)),\n",
+    "                                                             ('boosting', GradientBoostingRegressor(n_estimators=200,\n",
+    "                                                                                                    min_samples_split=46,\n",
+    "                                                                                                    min_samples_leaf=23,\n",
+    "                                                                                                    max_depth=80))]),\n",
+    "                              n_estimators=100,\n",
+    "                              loss='exponential')\n",
+    "ada_gb_model.fit(train_x, train_y)\n",
+    "r2_score(test_y, ada_gb_model.predict(test_x)), mean_squared_error(test_y, ada_gb_model.predict(test_x), squared=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -908,13 +981,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 105,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0.        , 0.47210624, 0.42965303, ..., 0.        , 0.41258743,\n        0.61663878],\n       [0.        , 0.47210624, 0.49915546, ..., 0.        , 0.41258743,\n        0.43137602],\n       [0.53092803, 0.52789376, 0.42965303, ..., 1.        , 0.52202823,\n        0.50419355],\n       ...,\n       [0.        , 0.49505129, 0.42965303, ..., 0.        , 0.52202823,\n        0.5626834 ],\n       [0.59093623, 0.49505129, 0.42965303, ..., 0.52264797, 0.        ,\n        0.        ],\n       [0.53092803, 0.49505129, 0.56016822, ..., 1.        , 0.64555594,\n        0.59182204]])"
+      "text/plain": "array([[0.21229623, 0.21229623, 0.1057639 , ..., 0.10707049, 0.10486663,\n        0.10635302],\n       [0.19728079, 0.19728079, 0.09828335, ..., 0.06427393, 0.09744955,\n        0.09883081],\n       [0.19085788, 0.19085788, 0.09508352, ..., 0.09625817, 0.09427686,\n        0.09561316],\n       ...,\n       [0.20184015, 0.20184015, 0.10055478, ..., 0.10179703, 0.09970171,\n        0.06625048],\n       [0.20415432, 0.20415432, 0.10170768, ..., 0.06091675, 0.10084482,\n        0.10227421],\n       [0.18636119, 0.18636119, 0.09284331, ..., 0.09399029, 0.09205566,\n        0.09336047]])"
      },
-     "execution_count": 64,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,14 +1005,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "outputs": [
     {
      "data": {
-      "text/plain": "          SalePrice\nId                 \n1461  115458.805570\n1462  143968.525052\n1463  182833.798383\n1464  185518.939712\n1465  187676.457612\n...             ...\n2915   72158.151125\n2916   79612.959148\n2917  154404.189237\n2918  122005.062992\n2919  194648.250464\n\n[1459 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SalePrice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1461</th>\n      <td>115458.805570</td>\n    </tr>\n    <tr>\n      <th>1462</th>\n      <td>143968.525052</td>\n    </tr>\n    <tr>\n      <th>1463</th>\n      <td>182833.798383</td>\n    </tr>\n    <tr>\n      <th>1464</th>\n      <td>185518.939712</td>\n    </tr>\n    <tr>\n      <th>1465</th>\n      <td>187676.457612</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2915</th>\n      <td>72158.151125</td>\n    </tr>\n    <tr>\n      <th>2916</th>\n      <td>79612.959148</td>\n    </tr>\n    <tr>\n      <th>2917</th>\n      <td>154404.189237</td>\n    </tr>\n    <tr>\n      <th>2918</th>\n      <td>122005.062992</td>\n    </tr>\n    <tr>\n      <th>2919</th>\n      <td>194648.250464</td>\n    </tr>\n  </tbody>\n</table>\n<p>1459 rows × 1 columns</p>\n</div>"
+      "text/plain": "          SalePrice\nId                 \n1461  115639.427172\n1462  143949.688458\n1463  182583.685411\n1464  185645.094020\n1465  187904.932140\n...             ...\n2915   72295.467882\n2916   79922.696101\n2917  154492.893280\n2918  122208.768902\n2919  194321.609990\n\n[1459 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SalePrice</th>\n    </tr>\n    <tr>\n      <th>Id</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1461</th>\n      <td>115639.427172</td>\n    </tr>\n    <tr>\n      <th>1462</th>\n      <td>143949.688458</td>\n    </tr>\n    <tr>\n      <th>1463</th>\n      <td>182583.685411</td>\n    </tr>\n    <tr>\n      <th>1464</th>\n      <td>185645.094020</td>\n    </tr>\n    <tr>\n      <th>1465</th>\n      <td>187904.932140</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2915</th>\n      <td>72295.467882</td>\n    </tr>\n    <tr>\n      <th>2916</th>\n      <td>79922.696101</td>\n    </tr>\n    <tr>\n      <th>2917</th>\n      <td>154492.893280</td>\n    </tr>\n    <tr>\n      <th>2918</th>\n      <td>122208.768902</td>\n    </tr>\n    <tr>\n      <th>2919</th>\n      <td>194321.609990</td>\n    </tr>\n  </tbody>\n</table>\n<p>1459 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 94,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "outputs": [],
    "source": [
     "prediction.to_csv('../data/predictions_v_4.csv')"
