more narrow tuning for decision tree

--- a/model/ensemble.ipynb
+++ b/model/ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +54,10 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import StackingRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "from sklearn.ensemble import AdaBoostRegressor"
+    "from sklearn.ensemble import AdaBoostRegressor\n",
+    "\n",
+    "# XGBoost\n",
+    "# from xgboost"
    ]
   },
   {
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "base_pipeline = Pipeline(steps=[('most_miss_cat', imputation.CategoricalImputer(variables=['Alley',\n",
@@ -145,13 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "((1168, 20), (292, 20), (1168,), (292,))"
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
