--- a/notebooks/v3/improvment.ipynb
+++ b/notebooks/v3/improvment.ipynb
@@ -90,7 +90,7 @@
    "execution_count": 6,
    "outputs": [],
    "source": [
-    "full_impute_pipeline = imputation_pipeline()"
+    "full_impute_pipeline = imputation_pipeline(house_data)"
    ],
    "metadata": {
     "collapsed": false
@@ -98,13 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([['None', 'BrkFace', 'Gd', ..., 196.0, 'BrkFace', 2003.0],\n       ['None', 'None', 'Gd', ..., 0.0, 'None', 1976.0],\n       ['None', 'BrkFace', 'Gd', ..., 162.0, 'BrkFace', 2001.0],\n       ...,\n       ['None', 'None', 'TA', ..., 0.0, 'None', 1941.0],\n       ['None', 'None', 'TA', ..., 0.0, 'None', 1950.0],\n       ['None', 'None', 'TA', ..., 0.0, 'None', 1965.0]], dtype=object)"
+      "text/plain": "     Alley MasVnrType BsmtQual BsmtCond BsmtExposure BsmtFinType1  \\\n0     None    BrkFace       Gd       TA           No          GLQ   \n1     None       None       Gd       TA           Gd          ALQ   \n2     None    BrkFace       Gd       TA           Mn          GLQ   \n3     None       None       TA       Gd           No          ALQ   \n4     None    BrkFace       Gd       TA           Av          GLQ   \n...    ...        ...      ...      ...          ...          ...   \n1455  None       None       Gd       TA           No          Unf   \n1456  None      Stone       Gd       TA           No          ALQ   \n1457  None       None       TA       Gd           No          GLQ   \n1458  None       None       TA       TA           Mn          GLQ   \n1459  None       None       TA       TA           No          BLQ   \n\n     BsmtFinType2 FireplaceQu GarageType GarageFinish  ... OpenPorchSF  \\\n0             Unf        None     Attchd          RFn  ...          61   \n1             Unf          TA     Attchd          RFn  ...           0   \n2             Unf          TA     Attchd          RFn  ...          42   \n3             Unf          Gd     Detchd          Unf  ...          35   \n4             Unf          TA     Attchd          RFn  ...          84   \n...           ...         ...        ...          ...  ...         ...   \n1455          Unf          TA     Attchd          RFn  ...          40   \n1456          Rec          TA     Attchd          Unf  ...           0   \n1457          Unf          Gd     Attchd          RFn  ...          60   \n1458          Rec        None     Attchd          Unf  ...           0   \n1459          LwQ        None     Attchd          Fin  ...          68   \n\n     EnclosedPorch 3SsnPorch ScreenPorch PoolArea MiscVal MoSold YrSold  \\\n0                0         0           0        0       0      2   2008   \n1                0         0           0        0       0      5   2007   \n2                0         0           0        0       0      9   2008   \n3              272         0           0        0       0      2   2006   \n4                0         0           0        0       0     12   2008   \n...            ...       ...         ...      ...     ...    ...    ...   \n1455             0         0           0        0       0      8   2007   \n1456             0         0           0        0       0      2   2010   \n1457             0         0           0        0    2500      5   2010   \n1458           112         0           0        0       0      4   2010   \n1459             0         0           0        0       0      6   2008   \n\n     SaleType SaleCondition  \n0          WD        Normal  \n1          WD        Normal  \n2          WD        Normal  \n3          WD       Abnorml  \n4          WD        Normal  \n...       ...           ...  \n1455       WD        Normal  \n1456       WD        Normal  \n1457       WD        Normal  \n1458       WD        Normal  \n1459       WD        Normal  \n\n[1460 rows x 80 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Alley</th>\n      <th>MasVnrType</th>\n      <th>BsmtQual</th>\n      <th>BsmtCond</th>\n      <th>BsmtExposure</th>\n      <th>BsmtFinType1</th>\n      <th>BsmtFinType2</th>\n      <th>FireplaceQu</th>\n      <th>GarageType</th>\n      <th>GarageFinish</th>\n      <th>...</th>\n      <th>OpenPorchSF</th>\n      <th>EnclosedPorch</th>\n      <th>3SsnPorch</th>\n      <th>ScreenPorch</th>\n      <th>PoolArea</th>\n      <th>MiscVal</th>\n      <th>MoSold</th>\n      <th>YrSold</th>\n      <th>SaleType</th>\n      <th>SaleCondition</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>None</td>\n      <td>BrkFace</td>\n      <td>Gd</td>\n      <td>TA</td>\n      <td>No</td>\n      <td>GLQ</td>\n      <td>Unf</td>\n      <td>None</td>\n      <td>Attchd</td>\n      <td>RFn</td>\n      <td>...</td>\n      <td>61</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2008</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>None</td>\n      <td>None</td>\n      <td>Gd</td>\n      <td>TA</td>\n      <td>Gd</td>\n      <td>ALQ</td>\n      <td>Unf</td>\n      <td>TA</td>\n      <td>Attchd</td>\n      <td>RFn</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>5</td>\n      <td>2007</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>None</td>\n      <td>BrkFace</td>\n      <td>Gd</td>\n      <td>TA</td>\n      <td>Mn</td>\n      <td>GLQ</td>\n      <td>Unf</td>\n      <td>TA</td>\n      <td>Attchd</td>\n      <td>RFn</td>\n      <td>...</td>\n      <td>42</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>9</td>\n      <td>2008</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>None</td>\n      <td>None</td>\n      <td>TA</td>\n      <td>Gd</td>\n      <td>No</td>\n      <td>ALQ</td>\n      <td>Unf</td>\n      <td>Gd</td>\n      <td>Detchd</td>\n      <td>Unf</td>\n      <td>...</td>\n      <td>35</td>\n      <td>272</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2006</td>\n      <td>WD</td>\n      <td>Abnorml</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>None</td>\n      <td>BrkFace</td>\n      <td>Gd</td>\n      <td>TA</td>\n      <td>Av</td>\n      <td>GLQ</td>\n      <td>Unf</td>\n      <td>TA</td>\n      <td>Attchd</td>\n      <td>RFn</td>\n      <td>...</td>\n      <td>84</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>12</td>\n      <td>2008</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1455</th>\n      <td>None</td>\n      <td>None</td>\n      <td>Gd</td>\n      <td>TA</td>\n      <td>No</td>\n      <td>Unf</td>\n      <td>Unf</td>\n      <td>TA</td>\n      <td>Attchd</td>\n      <td>RFn</td>\n      <td>...</td>\n      <td>40</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>8</td>\n      <td>2007</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n    <tr>\n      <th>1456</th>\n      <td>None</td>\n      <td>Stone</td>\n      <td>Gd</td>\n      <td>TA</td>\n      <td>No</td>\n      <td>ALQ</td>\n      <td>Rec</td>\n      <td>TA</td>\n      <td>Attchd</td>\n      <td>Unf</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2010</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n    <tr>\n      <th>1457</th>\n      <td>None</td>\n      <td>None</td>\n      <td>TA</td>\n      <td>Gd</td>\n      <td>No</td>\n      <td>GLQ</td>\n      <td>Unf</td>\n      <td>Gd</td>\n      <td>Attchd</td>\n      <td>RFn</td>\n      <td>...</td>\n      <td>60</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2500</td>\n      <td>5</td>\n      <td>2010</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n    <tr>\n      <th>1458</th>\n      <td>None</td>\n      <td>None</td>\n      <td>TA</td>\n      <td>TA</td>\n      <td>Mn</td>\n      <td>GLQ</td>\n      <td>Rec</td>\n      <td>None</td>\n      <td>Attchd</td>\n      <td>Unf</td>\n      <td>...</td>\n      <td>0</td>\n      <td>112</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>2010</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n    <tr>\n      <th>1459</th>\n      <td>None</td>\n      <td>None</td>\n      <td>TA</td>\n      <td>TA</td>\n      <td>No</td>\n      <td>BLQ</td>\n      <td>LwQ</td>\n      <td>None</td>\n      <td>Attchd</td>\n      <td>Fin</td>\n      <td>...</td>\n      <td>68</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n      <td>2008</td>\n      <td>WD</td>\n      <td>Normal</td>\n    </tr>\n  </tbody>\n</table>\n<p>1460 rows × 80 columns</p>\n</div>"
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,10 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "house_data[imputing_cols] = full_impute_pipeline.fit_transform(house_data)"
+    "house_data = full_impute_pipeline.fit_transform(house_data)"
    ],
    "metadata": {
     "collapsed": false
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -185,90 +186,91 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1460 entries, 0 to 1459\n",
-      "Data columns (total 79 columns):\n",
+      "Data columns (total 80 columns):\n",
       " #   Column         Non-Null Count  Dtype \n",
       "---  ------         --------------  ----- \n",
-      " 0   MSSubClass     1460 non-null   int64 \n",
-      " 1   MSZoning       1460 non-null   object\n",
-      " 2   LotFrontage    1460 non-null   object\n",
-      " 3   LotArea        1460 non-null   int64 \n",
-      " 4   Street         1460 non-null   object\n",
-      " 5   Alley          1460 non-null   object\n",
-      " 6   LotShape       1460 non-null   object\n",
-      " 7   LandContour    1460 non-null   object\n",
-      " 8   Utilities      1460 non-null   object\n",
-      " 9   LotConfig      1460 non-null   object\n",
-      " 10  LandSlope      1460 non-null   object\n",
-      " 11  Neighborhood   1460 non-null   object\n",
-      " 12  Condition1     1460 non-null   object\n",
-      " 13  Condition2     1460 non-null   object\n",
-      " 14  BldgType       1460 non-null   object\n",
-      " 15  HouseStyle     1460 non-null   object\n",
-      " 16  OverallQual    1460 non-null   int64 \n",
-      " 17  OverallCond    1460 non-null   int64 \n",
-      " 18  YearBuilt      1460 non-null   int64 \n",
-      " 19  YearRemodAdd   1460 non-null   int64 \n",
-      " 20  RoofStyle      1460 non-null   object\n",
-      " 21  RoofMatl       1460 non-null   object\n",
-      " 22  Exterior1st    1460 non-null   object\n",
-      " 23  Exterior2nd    1460 non-null   object\n",
-      " 24  MasVnrType     1460 non-null   object\n",
-      " 25  MasVnrArea     1460 non-null   object\n",
-      " 26  ExterQual      1460 non-null   object\n",
-      " 27  ExterCond      1460 non-null   object\n",
-      " 28  Foundation     1460 non-null   object\n",
-      " 29  BsmtQual       1460 non-null   object\n",
-      " 30  BsmtCond       1460 non-null   object\n",
-      " 31  BsmtExposure   1460 non-null   object\n",
-      " 32  BsmtFinType1   1460 non-null   object\n",
-      " 33  BsmtFinSF1     1460 non-null   int64 \n",
-      " 34  BsmtFinType2   1460 non-null   object\n",
-      " 35  BsmtFinSF2     1460 non-null   int64 \n",
-      " 36  BsmtUnfSF      1460 non-null   int64 \n",
-      " 37  TotalBsmtSF    1460 non-null   int64 \n",
-      " 38  Heating        1460 non-null   object\n",
-      " 39  HeatingQC      1460 non-null   object\n",
-      " 40  CentralAir     1460 non-null   object\n",
-      " 41  Electrical     1460 non-null   object\n",
-      " 42  1stFlrSF       1460 non-null   int64 \n",
-      " 43  2ndFlrSF       1460 non-null   int64 \n",
-      " 44  LowQualFinSF   1460 non-null   int64 \n",
-      " 45  GrLivArea      1460 non-null   int64 \n",
-      " 46  BsmtFullBath   1460 non-null   int64 \n",
-      " 47  BsmtHalfBath   1460 non-null   int64 \n",
-      " 48  FullBath       1460 non-null   int64 \n",
-      " 49  HalfBath       1460 non-null   int64 \n",
-      " 50  BedroomAbvGr   1460 non-null   int64 \n",
-      " 51  KitchenAbvGr   1460 non-null   int64 \n",
-      " 52  KitchenQual    1460 non-null   object\n",
-      " 53  TotRmsAbvGrd   1460 non-null   int64 \n",
-      " 54  Functional     1460 non-null   object\n",
-      " 55  Fireplaces     1460 non-null   int64 \n",
-      " 56  FireplaceQu    1460 non-null   object\n",
-      " 57  GarageType     1460 non-null   object\n",
-      " 58  GarageYrBlt    1460 non-null   object\n",
-      " 59  GarageFinish   1460 non-null   object\n",
-      " 60  GarageCars     1460 non-null   int64 \n",
-      " 61  GarageArea     1460 non-null   int64 \n",
-      " 62  GarageQual     1460 non-null   object\n",
-      " 63  GarageCond     1460 non-null   object\n",
-      " 64  PavedDrive     1460 non-null   object\n",
-      " 65  WoodDeckSF     1460 non-null   int64 \n",
-      " 66  OpenPorchSF    1460 non-null   int64 \n",
-      " 67  EnclosedPorch  1460 non-null   int64 \n",
-      " 68  3SsnPorch      1460 non-null   int64 \n",
-      " 69  ScreenPorch    1460 non-null   int64 \n",
-      " 70  PoolArea       1460 non-null   int64 \n",
-      " 71  PoolQC         1460 non-null   object\n",
-      " 72  Fence          1460 non-null   object\n",
-      " 73  MiscFeature    1460 non-null   object\n",
-      " 74  MiscVal        1460 non-null   int64 \n",
-      " 75  MoSold         1460 non-null   int64 \n",
-      " 76  YrSold         1460 non-null   int64 \n",
-      " 77  SaleType       1460 non-null   object\n",
-      " 78  SaleCondition  1460 non-null   object\n",
-      "dtypes: int64(33), object(46)\n",
-      "memory usage: 901.2+ KB\n"
+      " 0   Alley          1460 non-null   object\n",
+      " 1   MasVnrType     1460 non-null   object\n",
+      " 2   BsmtQual       1460 non-null   object\n",
+      " 3   BsmtCond       1460 non-null   object\n",
+      " 4   BsmtExposure   1460 non-null   object\n",
+      " 5   BsmtFinType1   1460 non-null   object\n",
+      " 6   BsmtFinType2   1460 non-null   object\n",
+      " 7   FireplaceQu    1460 non-null   object\n",
+      " 8   GarageType     1460 non-null   object\n",
+      " 9   GarageFinish   1460 non-null   object\n",
+      " 10  GarageQual     1460 non-null   object\n",
+      " 11  GarageCond     1460 non-null   object\n",
+      " 12  PoolQC         1460 non-null   object\n",
+      " 13  Fence          1460 non-null   object\n",
+      " 14  MiscFeature    1460 non-null   object\n",
+      " 15  Electrical     1460 non-null   object\n",
+      " 16  LotFrontage    1460 non-null   object\n",
+      " 17  MSZoning       1460 non-null   object\n",
+      " 18  MasVnrArea     1460 non-null   object\n",
+      " 19  MasVnrType     1460 non-null   object\n",
+      " 20  GarageYrBlt    1460 non-null   object\n",
+      " 21  MSSubClass     1460 non-null   int64 \n",
+      " 22  LotArea        1460 non-null   int64 \n",
+      " 23  Street         1460 non-null   object\n",
+      " 24  LotShape       1460 non-null   object\n",
+      " 25  LandContour    1460 non-null   object\n",
+      " 26  Utilities      1460 non-null   object\n",
+      " 27  LotConfig      1460 non-null   object\n",
+      " 28  LandSlope      1460 non-null   object\n",
+      " 29  Neighborhood   1460 non-null   object\n",
+      " 30  Condition1     1460 non-null   object\n",
+      " 31  Condition2     1460 non-null   object\n",
+      " 32  BldgType       1460 non-null   object\n",
+      " 33  HouseStyle     1460 non-null   object\n",
+      " 34  OverallQual    1460 non-null   int64 \n",
+      " 35  OverallCond    1460 non-null   int64 \n",
+      " 36  YearBuilt      1460 non-null   int64 \n",
+      " 37  YearRemodAdd   1460 non-null   int64 \n",
+      " 38  RoofStyle      1460 non-null   object\n",
+      " 39  RoofMatl       1460 non-null   object\n",
+      " 40  Exterior1st    1460 non-null   object\n",
+      " 41  Exterior2nd    1460 non-null   object\n",
+      " 42  ExterQual      1460 non-null   object\n",
+      " 43  ExterCond      1460 non-null   object\n",
+      " 44  Foundation     1460 non-null   object\n",
+      " 45  BsmtFinSF1     1460 non-null   int64 \n",
+      " 46  BsmtFinSF2     1460 non-null   int64 \n",
+      " 47  BsmtUnfSF      1460 non-null   int64 \n",
+      " 48  TotalBsmtSF    1460 non-null   int64 \n",
+      " 49  Heating        1460 non-null   object\n",
+      " 50  HeatingQC      1460 non-null   object\n",
+      " 51  CentralAir     1460 non-null   object\n",
+      " 52  1stFlrSF       1460 non-null   int64 \n",
+      " 53  2ndFlrSF       1460 non-null   int64 \n",
+      " 54  LowQualFinSF   1460 non-null   int64 \n",
+      " 55  GrLivArea      1460 non-null   int64 \n",
+      " 56  BsmtFullBath   1460 non-null   int64 \n",
+      " 57  BsmtHalfBath   1460 non-null   int64 \n",
+      " 58  FullBath       1460 non-null   int64 \n",
+      " 59  HalfBath       1460 non-null   int64 \n",
+      " 60  BedroomAbvGr   1460 non-null   int64 \n",
+      " 61  KitchenAbvGr   1460 non-null   int64 \n",
+      " 62  KitchenQual    1460 non-null   object\n",
+      " 63  TotRmsAbvGrd   1460 non-null   int64 \n",
+      " 64  Functional     1460 non-null   object\n",
+      " 65  Fireplaces     1460 non-null   int64 \n",
+      " 66  GarageCars     1460 non-null   int64 \n",
+      " 67  GarageArea     1460 non-null   int64 \n",
+      " 68  PavedDrive     1460 non-null   object\n",
+      " 69  WoodDeckSF     1460 non-null   int64 \n",
+      " 70  OpenPorchSF    1460 non-null   int64 \n",
+      " 71  EnclosedPorch  1460 non-null   int64 \n",
+      " 72  3SsnPorch      1460 non-null   int64 \n",
+      " 73  ScreenPorch    1460 non-null   int64 \n",
+      " 74  PoolArea       1460 non-null   int64 \n",
+      " 75  MiscVal        1460 non-null   int64 \n",
+      " 76  MoSold         1460 non-null   int64 \n",
+      " 77  YrSold         1460 non-null   int64 \n",
+      " 78  SaleType       1460 non-null   object\n",
+      " 79  SaleCondition  1460 non-null   object\n",
+      "dtypes: int64(33), object(47)\n",
+      "memory usage: 912.6+ KB\n"
      ]
     }
    ],
